--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-tailwind/react": "^2.1.10",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
