--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-intl-tel-input": "^8.2.0",
+    "react-select": "^5.8.3",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
