--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
